<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button34"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button36"
        app:layout_constraintTop_toBottomOf="@+id/button30" />

    <Button
        android:id="@+id/button35"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:text="@string/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button36"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button36"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button34"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button35"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button33"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/button35"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/button30"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toTopOf="@+id/button34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button31"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/button35"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button32"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/button36"
        app:layout_constraintEnd_toStartOf="@+id/button30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button33"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button23"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button22"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_minus"
        app:layout_constraintBottom_toTopOf="@+id/button30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button25"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button23"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button24"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button1"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button39" />

    <Button
        android:id="@+id/button39"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/button19"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button40" />

    <Button
        android:id="@+id/button40"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_percent"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/button20"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button41" />

    <Button
        android:id="@+id/button41"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_div"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toStartOf="@+id/button21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button40"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/button21"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_mul"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button42" />

    <Button
        android:id="@+id/button42"
        android:layout_width="77dp"
        android:layout_height="75dp"
        android:text="@string/button_back"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="384dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>